// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Policy Directive Tests LowerCase on object, policy on field, localResolver on parent query (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "bar",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests LowerCase on object, policy on field, localResolver on parent query (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "errorCode": "INTERNAL_SERVER_ERROR",
      "path": [
        "foo",
        "bar"
      ]
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests LowerCase, policy on object, localResolver on parent query (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "bar",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests LowerCase, policy on object, localResolver on parent query (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "errorCode": "INTERNAL_SERVER_ERROR",
      "path": [
        "foo",
        "bar"
      ]
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Mock, policy on object, localResolver on parent query (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "BAR: 1",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Mock, policy on object, localResolver on parent query (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "errorCode": "INTERNAL_SERVER_ERROR",
      "path": [
        "foo",
        "bar"
      ]
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Policy on field, localResolver on parent query (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "BAR",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Policy on field, localResolver on parent query (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "errorCode": "INTERNAL_SERVER_ERROR",
      "path": [
        "foo",
        "bar"
      ]
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Policy on field, resolver on object (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "BAR",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Policy on field, resolver on object (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "errorCode": "INTERNAL_SERVER_ERROR",
      "path": [
        "foo",
        "bar"
      ]
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Policy on object, localResolver on field (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "BAR",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Policy on object, localResolver on field (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "errorCode": "INTERNAL_SERVER_ERROR",
      "path": [
        "foo",
        "bar"
      ]
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Policy on object, localResolver on parent query (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "BAR",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Policy, localResolver on field (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "BAR",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Policy, localResolver on field (DENY) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "BAR",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Policy, localResolver on parent query (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "errorCode": "INTERNAL_SERVER_ERROR",
      "path": [
        "foo",
        "bar"
      ]
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Policy, lowerCase on object, localResolver on parent query (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "bar",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Policy, lowerCase on object, localResolver on parent query (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "errorCode": "INTERNAL_SERVER_ERROR",
      "path": [
        "foo",
        "bar"
      ]
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Stub, lowerCase, policy on field (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "bar",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Stub, lowerCase, policy on field (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "errorCode": "INTERNAL_SERVER_ERROR",
      "path": [
        "foo",
        "bar"
      ]
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Stub, policy on field (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "BAR",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Stub, policy on field (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "errorCode": "INTERNAL_SERVER_ERROR",
      "path": [
        "foo",
        "bar"
      ]
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Stub, policy, lowerCase on field (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "bar",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Stub, policy, lowerCase on field (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "errorCode": "INTERNAL_SERVER_ERROR",
      "path": [
        "foo",
        "bar"
      ]
    }
  ],
  "data": {}
}
`;
